assets/css/style.css
* {
    margin: 0;
    padding: 0;
}

/* general styles */

body {

    min-height: 100vh;
    display: flex;
    flex-direction: column;
}

main {
    flex: 1 0 auto;
    margin-top: 60px;
}

/* header */

header {
    position: fixed;
    display: flex;
    justify-content: space-between;
    background-color: rgba(32, 156, 238, 0.6);
    height: 60px;
    width: 100%;
}

/* styles for links in header, both logo and navbar links */

header a {
    text-decoration: none;
    color: inherit
}

/* Adding background elements for logo */

#logo {
    color: #FA5;
    background-color: #3a3a3a;
    padding: 10px;
    border-radius: 50%;
}

/* Navbar styles for menu with dropdown toggle */

#navmenu {
    list-style-type: none;
}

#navmenu li {
    color: #3a3a3a;
    padding: 15px 0;
}

nav {
    position: absolute;
    background-color: #FA5;
    width: 100%;
    left: 0;
    padding: 0 1rem;
    box-shadow: 0 2px 2px #FA5;
    display: none;
    top: 100%;
    height: auto;
}

i {
    margin-right: 10px;
}

/*Navmenu dropdown toggle */

#navmenu-toggle:checked~nav {
    display: block;
}

#navmenu-toggle {
    display: none;
}

.navmenu-toggle-label {
    font-size: 2rem;
    padding-top: 5%;
    padding-right: 5%;
}

/* styles for main content */

main div>section {
    border: 2px solid white;
}

/* Introduction Section */
#introduction {
    background: url("../images/introduction_content_background.jpg") no-repeat 10% 10%/cover;
    color: white;
    min-height: 200px;
}

#intro-content {
    background-color: rgba(32, 156, 238, 0.6);
    width: 80%;
    padding: 25px 20px;
    margin: 5%;
    border-radius: 50%;
    text-align: center;
}

/* Service Section */

#services>h2 {
    text-align: center;
    background-color: white;
}

#services-content {
    display: flex;
    flex-direction: column;
}

.care-package {
    display: flex;
    width: 80%;
    margin: 10px;
    border-radius: 10%;
    padding: 10px;
    background-color: #FA5;
    border: 2px solid #3a3a3a;
}

.care-package>h2 {
    text-align: center;
}

.care-package ul {
    list-style-type: none;
}

.price {
    background-color: black;
    color: orange;
    border-radius: 50%;
    padding: 10px;
    line-height: 35px;
    margin-top: 50px;
    box-shadow: solid 2px #3a3a3a;
    text-decoration: none;
}

/* Video Section */
#working-video h2 {
    background-color: rgba(32, 156, 238, 0.6);
    border-radius: 50%;
    padding: 30px;
}

#working-video iframe {
    margin: 5px;
}

#working-video p {
    text-align: center;
    padding-bottom: 5px;
}

/* Styles for footer */
footer {
    display: flex;
    flex-direction: column;
    background-color: rgba(32, 156, 238, 0.6);
}

footer table {
    padding-left: 10px;
}

#social-media {
    display: flex;
    padding: 20px 5px;
    align-items: center;
    justify-content: space-between;
    max-width: 280px;
}

#social-media a {
    font-size: 170%;
    color: #3a3a3a;
}

/* 768px and above(tablets etc) */
@media screen and (min-width:768px) {

    /* Header */
    nav {
        display: block;
        position: relative;
        top: 0;
        left: auto;
        height: 55px;
        padding-top: 5px;
        box-shadow: none;
        width: fit-content;
    }

    #navmenu {
        display: flex;

    }

    #navmenu>li {
        padding-left: 1rem;

    }

    .current {
        border-left: solid 1px white;
    }

    #navmenu ul {
        border: solid 1px #3a3a3a;
    }

    .navmenu-toggle-label {
        display: none;
    }

    #logo {
        font-size: 260%;
    }

    /* services */

    #services h2 {
        margin-bottom: 20px;
    }

    #services-content {
        display: flex;
        flex-direction: row;
        justify-content: space-between;
    }

    .care-package {
        max-width: 200px;
    }

    .price {
        align-items: center;
    }

    #video-header {
        margin-bottom: 20px;
    }

    iframe {
        width: 95%;
        margin: auto;
    }

    #working-video div p {
        margin: 10px;
    }

    /* Footer */

    #footer-container {
        display: flex;
        flex-direction: row;
        align-items: center;
    }

    #business-hours {
        display: flex;
        flex-grow: 1;
    }

    #business-hour table,
    th,
    td {
        font-size: 26px;
    }

    #business-location {
        margin-top: 10px;
        flex-grow: 2;
    }

    #social-media {
        max-width: 90%;
        padding-left: 5%;
    }
}

/* styles for laptop(1024 and above) */
@media screen and (min-width:1024px) {

    /* header */
    header {
        font-size: 26px;
        height: 90px;
    }

    nav {
        height: 85px;
    }

    #navmenu>li {
        margin-top: 10px;
    }

    #navmenu>li>a:hover {
        color: white;
    }

    /*introduction section*/
    #introduction {
        background: url("../images/introduction_content_background.jpg") no-repeat 10% center/cover;
        margin-top: 30px;
        height: 450px;
    }

    #intro-content {
        font-size: 20px;
        margin-top: 140px;
        border-radius: 0;
    }

    /* services section */
    #services h2 {
        margin-top: 20px;
        background-color: #FA5;
    }

    #services-content {
        background: url("../images/services_content_background.jpg") no-repeat center center/cover;
        height: 300px;
    }

    .care-package {
        max-width: max-content;
        height: 200px;
        flex-direction: column;
        justify-content: space-around;
        align-items: center;
    }

    .price {
        border-radius: 50%;
        font-size: 20px;
        text-align: center;
        margin-top: 60px;
    }

    /* working-video section */
    #video-header {
        margin-top: 40px;
        font-size: 50px;
        text-align: center;
    }

    /* Footer */
    #business-hours {
        margin-left: 20px;
    }

    #social-media {
        font-size: 30px;
    }
}

/* For screen sizes above 1200px, laptops, desktops, TVs etc */
@media screen and (min-width:1200px) {

    /* Header */
    #navmenu>li {
        margin-left: 40px;

    }

    .current {
        border-left: solid 5px white;
    }

    /* Main content, adjusting sections to better utilize the space */
    main>div {
        display: flex;
        flex-wrap: wrap;
        margin: 10px 5px;
    }

    main>div>section {
        flex: 1;
    }

    /* services */
    #services {
        margin-top: 10px;
    }

    #services h2 {
        font-size: 40px;
        margin-bottom: 5px;
    }


    #services-content {
        height: 395px;
    }

    .care-package {
        flex-direction: column;
        justify-content: space-around;
    }

    .price {
        margin-top: 0;
        align-self: flex-end, center;
    }

    /* video section */
    #working-video {
        flex-basis: 100%;
    }

    /* Footer */
    #social-media>a:hover {
        color: white;
    }
}

